# Carolyna

./: .gitignore  CMakeLists.txt  README.md
include/: ChessAI.h  ChessBitboardUtils.h  ChessBoard.h  Constants.h  Debug.h  Evaluation.h  GameManager.h  Move.h  MoveGenerator.h  UciHandler.h
src/: ChessAI.cpp  ChessBitboardUtils.cpp  ChessBoard.cpp  Evaluation.cpp  GameManager.cpp  UciHandler.cpp  main.cpp
tests/: EngineSmokeTests.cpp
